--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
-r.GenerateMeshDistanceFields=True
+r.GenerateMeshDistanceFields=False
 r.DynamicGlobalIlluminationMethod=2
 r.Lumen.TraceMeshSDFs=0
 r.Shadow.Virtual.Enable=1
@@ -22,7 +22,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.AllowGlobalClipPlane=True
 r.DefaultFeature.MotionBlur=False
-r.VirtualTextures=True
+r.VirtualTextures=False
+r.TextureStreaming=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
