--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CB09E4DD4F7D776EB6E618B4A70919D5
-ProjectName=Third Person BP Game Template
+ProjectName=THS
+Description=Tragic Hamster Simulator
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CC49ED8A4D2623E4B4030FBCB0C41F5F", "THS")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
